# fast-mcp-telegram

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.bat  server.json  setup.py  setup_telegram.py  test_local_server.py  test_logging.py  web-setup-spec.md
.cursor/: environment.json  mcp.json
docs/: Deployment.md  Filters-vs-Folders.md  Installation.md  MTProto-Bridge.md  Operations.md  Project-Structure.md  Remote-Server-Setup.md  Search-Guidelines.md  Tools-Reference.md  language_model_guidance.md
memory-bank/: activeContext.md  productContext.md  progress.md  progress_history.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check-status.sh  deploy-mcp.sh  sync-remote-config.sh  sync-vds-service.sh
src/: __init__.py  cli_setup.py  server.py  setup_telegram.py
tests/: __init__.py  conftest.py  simple_test.py  test_attachment_streaming.py  test_auth_url_token.py  test_basic_functionality.py  test_bearer_token_determination.py  test_client.py  test_conflict_search.py  test_contacts_bot_folder.py  test_contacts_date_filtering.py  test_decorator_order_fix.py  test_error_handling.py  test_fastmcp_decorator_integration.py  test_file_handling_send.py  test_file_id_passthrough.py  test_forum_topics_minimal.py  test_get_messages.py  test_links.py  test_mcp.py  test_mcp_config_generation.py  test_message_editing.py  test_message_format_attachment_urls.py  test_message_formatting.py  test_mtproto.py  test_search.py  (+6 more)
(+90 files in other folders)
